# accord

./: .gitignore  API.md  CHANGELOG.md  Cargo.toml  DISTRIBUTION.md  PLAN_V4.md  PROMPT_LOT_D_V4.md  PROMPT_LOT_E_V4.md  PROMPT_LOT_F_V4.md  README.md  SECURITY.md  SPEC.md  ci.sh  clippy_out.txt  deny.toml
.github/workflows/: ci.yml  fuzz.yml  release.yml
app/: onboarding-showcase.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  ui-showcase.html  vite.config.ts
app/e2e/: composer.spec.ts  helpers.ts  navigation.spec.ts  server-menu.spec.ts  themes.spec.ts  thread.spec.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commandes.rs  etat.rs  lib.rs
app/src/components/: AppShell.test.tsx  AppShell.tsx  Attachments.test.tsx  Attachments.tsx  Avatar.test.tsx  Avatar.tsx  AvatarCropper.tsx  BackupSettingsPanel.test.tsx  BackupSettingsPanel.tsx  BodyText.test.tsx  BodyText.tsx  ChatView.test.tsx  ChatView.tsx  ContextMenu.test.tsx  ContextMenu.tsx  CustomEmoji.test.tsx  EmojiPicker.tsx  EmptyState.test.tsx  EmptyState.tsx  ErrorBoundary.tsx  EventsModal.tsx  ForumView.test.tsx  ForumView.tsx  ForwardPicker.tsx  FriendQrModal.test.tsx  FriendQrModal.tsx  FriendsView.tsx  IncomingCall.test.tsx  IncomingCall.tsx  InviteCard.test.tsx  InviteCard.tsx  InviteEmbed.tsx  MarkdownText.tsx  MentionInbox.tsx  MessageActions.tsx  MessageInput.test.tsx  MessageInput.tsx  MessageList.test.tsx  MessageList.tsx  MessageQuote.test.tsx  (+54 more)
app/src/demo/: OnboardingDemo.tsx  ProfilePersonalizationDemo.tsx  UiPolishDemo.tsx
app/src/i18n/: en.ts  fr.ts  parity.test.ts
app/src/lib/: api.test.ts  api.ts  bridge.ts  callToast.test.ts  callToast.ts  color.test.ts  color.ts  compressEmojiImage.test.ts  compressEmojiImage.ts  conversationExport.test.ts  conversationExport.ts  customTheme.test.ts  customTheme.ts  decorationLayers.tsx  decorations-ambient.tsx  decorations-botanical.tsx  decorations-elemental.tsx  decorations-essentials.tsx  decorations-kinetic.tsx  decorations-manga.tsx  decorations-more.tsx  decorations-nature-manga.tsx  decorations-ornamental-frames.tsx  decorations-premium-frames.tsx  decorations.test.tsx  decorations.tsx  drafts.test.ts  drafts.ts  files.ts  focus.test.ts  format.test.ts  format.ts  friendLink.test.ts  friendLink.ts  history.test.ts  history.ts  markRead.ts  markdown.test.ts  markdown.ts  navPersistence.ts  (+16 more)
app/src/screens/: AccountPicker.test.tsx  AccountPicker.tsx  Onboarding.test.tsx  Onboarding.tsx  onboarding.css  onboardingUi.tsx
app/src/stores/: calls.test.ts  calls.ts  contextMenu.test.ts  contextMenu.ts  dms.test.ts  dms.ts  friends.test.ts  friends.ts  groups.test.ts  groups.ts  pinnedDms.test.ts  pinnedDms.ts  planning.test.ts  planning.ts  recentSearches.test.ts  recentSearches.ts  session.test.ts  session.ts  soundboard.test.ts  soundboard.ts  ui.test.ts  ui.ts  updater.test.ts  updater.ts  voice.test.ts  voice.ts
app/src/styles/: chat-polish.css  figurative-themes.css  global.css  identity-refresh.css  liquid-glass.css  profile-ambient-effects.css  profile-cosmetic-controls.css  profile-cosmetic-foundations.css  profile-elemental-avatars.css  profile-elemental-effects.css  profile-elemental-motion.css  profile-essential-motion.css  profile-figurative-avatars.css  theme-coverage.css  (+14 more)
crates/accord-core/: Cargo.toml
crates/accord-core/benches/: db.rs
crates/accord-core/src/: friends.rs  lib.rs  mentions.rs  messaging.rs  presence.rs  profile.rs
crates/accord-core/src/db/: contacts.rs  files.rs  groups.rs  invites.rs  mentions.rs  messages.rs  mod.rs  outbox.rs
crates/accord-core/src/group/: invite.rs  mod.rs  msg.rs  state.rs
crates/accord-core/tests/: proptest_group.rs
crates/accord-crypto/: Cargo.toml
crates/accord-crypto/benches/: crypto.rs
crates/accord-crypto/src/: archive.rs  handshake.rs  lib.rs  mnemonic.rs  sealed.rs  session.rs  vault.rs
crates/accord-crypto/tests/: proptest_friendcode.rs
crates/accord-macos/: Cargo.toml
crates/accord-macos/src/: lib.rs
crates/accord-node/: Cargo.toml
crates/accord-node/src/: backup.rs  lib.rs  maintenance.rs  registry.rs  runtime.rs
crates/accord-node/src/node/: diagnostics.rs  dm.rs  files.rs  friends.rs  groups.rs  mentions.rs  mod.rs  network.rs  profile.rs  relay.rs  tests.rs
crates/accord-node/src/service/: dm.rs  files.rs  friends.rs  groups.rs  helpers.rs  mentions.rs  mod.rs  network.rs  profile.rs  tests.rs
crates/accord-node/src/voice/: engine.rs
crates/accord-node/tests/: bench_mesures.rs  calls_e2e.rs  fichiers_e2e.rs  fichiers_nat_e2e.rs  maintenance_e2e.rs  nat_code_resolution_e2e.rs  nat_default_bootstrap_e2e.rs  nat_first_contact_e2e.rs  network_e2e.rs  profil_medias_e2e.rs  profil_perdu_e2e.rs  profil_reboot_e2e.rs  reconnexion_e2e.rs  reconnexion_lifecycle_e2e.rs  two_node_e2e.rs  voice_e2e.rs
crates/accord-proto/: Cargo.toml
crates/accord-proto/benches/: decode.rs
crates/accord-proto/src/: core_msg.rs  plaintext.rs  wire.rs
crates/accord-proto/tests/: proptest_codecs.proptest-regressions  proptest_codecs.rs  roundtrip.rs
crates/accord-voice/: Cargo.toml
crates/accord-voice/benches/: dsp.rs
crates/accord-voice/src/: convert.rs  dsp.rs  lib.rs  loss.rs  room.rs
deploy/bootstrap/: Dockerfile  accord-bootstrap.service  docker-compose.yml
docs/: API.md  BOOTSTRAP.md  COMMUNITY.md  NAT-FIRST-CONTACT.md  NAT_TRAVERSAL.md  THREAT-MODEL.md  VOICE_CALLS.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: backup_archive.rs  core_msg.rs  dht_record.rs  file_manifest.rs  group_op_body.rs  group_state.rs  handshake_decode.rs  proto_decode.rs
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/2026-07-16/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/cache/: stat-index.json
scripts/: build-macos.sh  deploy-site.sh
website/: guide.html  index.html  nouveautes.html  style.css
website/en/: guide.html  index.html  whats-new.html
(+45 files in other folders)
