[workspace]
resolver = "2"
# fuzz/ est un crate cargo-fuzz autonome (toolchain nightly, profils dédiés) :
# il vit hors du workspace pour ne pas imposer nightly au build normal.
exclude = ["fuzz"]
members = [
    "crates/accord-proto",
    "crates/accord-crypto",
    "crates/accord-transport",
    "crates/accord-dht",
    "crates/accord-core",
    "crates/accord-api",
    "crates/accord-node",
    "crates/accord-voice",
    "crates/accord-macos",
    "app/src-tauri",
]

[workspace.package]
version = "2.3.3"
edition = "2021"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util", "signal"] }
ed25519-dalek = { version = "2", features = ["rand_core", "digest"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
socket2 = "0.6"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.24"
futures-util = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
