[package]
name = "accord-app"
description = "Hôte de bureau Tauri d'Accord : cycle de vie de l'identité et nœud embarqué"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Feature `hardware` : codec Opus réel + capture/lecture cpal (D-020, D-025).
accord-node = { path = "../../crates/accord-node", features = ["hardware"] }
accord-proto = { path = "../../crates/accord-proto" }
serde.workspace = true
# Requis par `tauri::generate_context!` dès qu'une section `plugins` existe
# dans tauri.conf.json (la config updater y est sérialisée via serde_json).
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# `protocol-asset` : streaming disque des vidéos du fil (D-055) — sert les
# blobs complets du magasin de fichiers via asset:// (portée $APPDATA).
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
# Notifications système natives, envoyées depuis la webview (D-028).
tauri-plugin-notification = "2"
# Lancement au démarrage du système (D-047) : gestion officielle, pas de
# flag `localStorage` seul — l'état vient de l'OS (Registre/LaunchAgent/
# fichier .desktop selon la plateforme).
tauri-plugin-autostart = "2"
# Sélecteur de fichiers natif (ouverture pour joindre par chemin, sauvegarde
# pour télécharger un blob complet) : le chemin d'envoi/téléchargement non
# plafonné passe par `files.share`/`files.save`, qui exigent un chemin disque.
tauri-plugin-dialog = "2"
# Mise à jour intégrée (D-049) : vérification du latest.json publié avec
# chaque release GitHub, artefacts signés minisign (clé publique dans
# tauri.conf.json), téléchargement/installation pilotés depuis la webview
# via @tauri-apps/plugin-updater. `process` fournit le redémarrage propre
# de l'application une fois la mise à jour installée.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Autorisation micro macOS (TCC) : lecture de l'état réel et demande unique
# via AVFoundation — l'UI ne redéclenche jamais l'invite hors état
# « indéterminé » (boucle de dialogues sinon). Hors macOS : valeurs neutres.
accord-macos = { path = "../../crates/accord-macos" }

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
