[package]
name = "accord-crypto"
description = "Identités, preuve de travail, handshake, sessions AEAD, stockage chiffré et phrase de récupération d'Accord (SPEC.md §2, §5)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
accord-proto = { path = "../accord-proto" }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
bip39 = "2"

[dev-dependencies]
hex = "0.4"
proptest = "1"
criterion = "0.5"

[[bench]]
name = "crypto"
harness = false
